@@ -14,16 +14,17 @@ class AirbyteIntegrationTestJavaPlugin implements Plugin<Project> {
                 }
             }
         }
-        project.test.dependsOn('compileIntegrationTestJavaJava')
+        project.tasks.named('check').configure {
+            dependsOn project.tasks.matching { it.name == 'compileIntegrationTestJavaJava' }
+            dependsOn project.tasks.matching { it.name == 'spotbugsIntegrationTestJava' }
+        }
 
         project.configurations {
             integrationTestJavaImplementation.extendsFrom testImplementation
             integrationTestJavaRuntimeOnly.extendsFrom testRuntimeOnly
         }
 
-        project.task('integrationTestJava', type: Test) {
-            mustRunAfter project.test
-
+        def integrationTestJava = project.tasks.register('integrationTestJava', Test) {
             testClassesDirs = project.sourceSets.integrationTestJava.output.classesDirs
             classpath += project.sourceSets.integrationTestJava.runtimeClasspath
 
@@ -41,31 +42,27 @@ class AirbyteIntegrationTestJavaPlugin implements Plugin<Project> {
 
             outputs.upToDateWhen { false }
 
-            if(project.hasProperty('airbyteDocker')) {
-                dependsOn project.airbyteDocker
-            }
-
-            //This allows to set up a `gradle.properties` file inside the connector folder to reduce number of threads and reduce parallelization.
-            //Specially useful for connectors that shares resources (like Redshift or Snowflake).
-            ext.numberThreads = project.hasProperty('numberThreads') ? project.getProperty('numberThreads') as int : Runtime.runtime.availableProcessors() ?: 1
-            maxHeapSize = '3g'
-            maxParallelForks = numberThreads
-
-            // This is needed to make the destination-snowflake tests succeed - https://github.com/snowflakedb/snowflake-jdbc/issues/589#issuecomment-983944767
-            jvmArgs = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
+            maxParallelForks = project.test.maxParallelForks
+            maxHeapSize = project.test.maxHeapSize
 
             systemProperties = [
                 // Allow tests to set @Execution(ExecutionMode.CONCURRENT)
-                'junit.jupiter.execution.parallel.enabled': 'true'
+                'junit.jupiter.execution.parallel.enabled': 'true',
             ]
-        }
 
-        // make sure we create the integrationTest task once in case a standard source test was already initialized
-        if(!project.hasProperty('integrationTest')) {
-            project.task('integrationTest')
+            // Limit the number of concurrent tests within a single test class.
+            // See also usages of numberThreads.
+            if (project.hasProperty('parallelExecutionsPerThread')) {
+                int parallelExecutionsPerThread = project.property('parallelExecutionsPerThread').toString() as int
+                systemProperties = systemProperties + [
+                    'junit.jupiter.execution.parallel.config.strategy': 'fixed',
+                    'junit.jupiter.execution.parallel.config.fixed.parallelism': parallelExecutionsPerThread,
+                ]
+            }
         }
-
-        project.integrationTest.dependsOn(project.integrationTestJava)
-        project.integrationTest.dependsOn(project.spotbugsMain)
+        integrationTestJava.configure {
+            mustRunAfter project.tasks.named('check')
+            dependsOn project.tasks.matching { it.name == 'assemble' }
+        }
     }
 }
